    lintian tag).
  * Support updating debhelper-compat version in packages that use the
    debhelper-compat relation in Build-Depends.
  * Add fixer for maintainer-script-without-set-e.
  * Add fixer for debian-pycompat-is-obsolete.
  * Add fixer for public-upstream-keys-in-multiple-locations.
  * Add fixer for orphaned-package-should-not-have-uploaders.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 Feb 2019 15:11:25 +0000

lintian-brush (0.13) unstable; urgency=medium

  [ Dmitry Bogatov ]
  * Don't display error when debian/compat is missing. Closes: #921972

  [ Jelmer Vernooĳ ]
  * Allow fixers to provide an empty description when there are no
    changes.
  * Add fixer script for debian-source-options-has-custom-compression-
    settings.
  * Add build-depends-on-obsolete-package fixer. Currently just deals
    with dh-systemd => debhelper upgrades.
  * Bump standards version to 4.3.0 (no changes).
  * public-upstream-key-not-minimal: Export public PGP keys as armored
    text.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 12 Feb 2019 22:11:32 +0000

lintian-brush (0.12) unstable; urgency=medium

  * Add --identity flag that shows user identity.
  * Fall back to breezy identity and gecos field if no git identity is
    set. Closes: #921241
  * Make gpg more quiet when manipulating keyring files.
  * Require new Breezy with improved handling of submodule references
    in .git files. Closes: #921240

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 07 Feb 2019 05:56:14 +0000

lintian-brush (0.11) unstable; urgency=medium

  [ Jeroen Dekkers ]
  * Add dependency on devscripts. Closes: #919217

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 Jan 2019 19:11:40 +0000

lintian-brush (0.10) unstable; urgency=medium

  * Add a (inefficient) --dry-run option. Closes: #915977
  * Add --update-changelog option to force updating of changelog.
  * Add support for systemd-service-file-pidfile-refers-to-var-run.
    Closes: #917565