@@ -1,0 +1,2 @@
+Drop unnecessary dependency on build-essential.
+Fixed-Lintian-Tags: build-depends-on-build-essential
