@@ -23,6 +23,7 @@ lintian-brush (0.14) UNRELEASED; urgency=medium
   * Add fixer for debian-pycompat-is-obsolete.
   * Add fixer for public-upstream-keys-in-multiple-locations.
   * Add fixer for orphaned-package-should-not-have-uploaders.
+  * Add fixer for build-depends-on-build-essential.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 Feb 2019 15:11:25 +0000
 
